--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,6 +26,16 @@
             </ul>
             <img src="images/menu.png" alt="menu" class="menu-img">
         </nav>
+        <div class="row">
+            <div class="col">
+                <h1>All happiness depends on a <br>leisurely breakfast</h1>
+                <a href="#">order now</a>
+            </div>
+            <div class="col">
+                <img src="images/pic1.png" class="feature-img">
+                <img src="images/pic2.png" class="thumbnail-img">
+            </div>
+        </div>
     </div>
 </body>
 
